--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,10 +53,8 @@
 }
 
 .container {
-  padding-right: 0.75rem;
-  padding-left: 0.75rem;
-  margin-right: auto;
-  margin-left: auto;
+  padding: 1rem 0.75rem;
+  margin: 0 auto;
   width: 100%;
 }
 
