--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,7 +56,7 @@
     @apply mx-2 px-2 py-2;
     @apply text-xl;
     @apply rounded;
-    @apply hover:bg-red-400;
+    @apply hover:bg-teal-600;
     @apply transition cursor-pointer;
   }
 
